# raylib_game

./: CMakeLists.txt  LICENSE  README.md
assets/: level1.json
src/: main.cc
src/combat/: WeaponDefs.h
src/core/: Game.cc  Game.h
src/entities/: Enemy.cc  Enemy.h  Entity.h  Player.cc  Player.h
